14819
Using Scala version 2.8.0.r20087-b20091210111324 (OpenJDK 64-Bit Server VM, Java 1.6.0_0)

Given A.scala, B.scala, C.scala
{code}
object A {
  val x = new C
}
object B {
  import A.x.y
  val z = y
}
class C {
  val y = 4
}
{code}

 1. Compile
 1. Modify A.scala to replace {{val x}} with {{var x}}
{code}
class A {
  var x = 3
}
{code}
 1. Mark A.scala updated.  B.scala is not recompiled, missing the following error:
{code}
B.scala:3: error: stable identifier required, but A.x found.
        import A.x.y
                 ^
{code}
